@@ -49,3 +49,17 @@ dependencies {
 
     implementation 'com.liulishuo.filedownloader:library:1.7.7'
 }
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs.addAll([
+            '--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+            '--add-opens', 'jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
+            '--add-opens', 'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+            '--add-opens', 'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
+            '--add-opens', 'jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
+            '--add-opens', 'jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+            '--add-opens', 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
+            '--add-opens', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+            '--add-opens', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+    ])
+}
